tests/NormalTests/paczka1/small_fuzzy/23578034.err
Error in line 10: }VA S111 14,9
Error in line 14: JTTnB7 S591 14,6
